# tp2

./: CMakeLists.txt  README.md  appveyor.yml  changelog.md  generateStudent.py  readme.html  robot.c  robot.cpp  subdivision.c
.github/workflows/: continuous-integration.yml
